style.css
@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Noto+Serif&family=Roboto&Montserrat&family=Playfair+Display:ital,wght@0,500;1,700&family=Roboto&family=Sofia&family=Ubuntu&display=swap');
/* @import url('https://fonts.googleapis.com/css2?family=family=Montserrat&family=Playfair+Display:wght@500;700&display=swap'); */



/*
  ==============================================================================
  Custom styles
  ==============================================================================
*/
/* account for any border and padding in the values you specify 
for an element's width and height */
*,
*:before,
*:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

/* styles the tab navigation links and buttons outline */
*:focus {
    outline:
        /*thin dotted #E0AD34*/
        none;
}

/* removes the text decoration from all navigation links */
a {
    text-decoration: none;
}


/* ======= Hide scrollbar ====== */
* {
    /* Hide scrollbar for IE, Edge and Firefox */
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

/* Hide scrollbar for Chrome, Safari and Opera */
::-webkit-scrollbar {
    display: none;
}

/* main variables are used in order to be able to quickly change styles if needed or in case of rebranding */
:root {
    /* text color  */
    --white-txt: #fff;
    --dark-txt: #1C354C;
    --blue-txt: #005392;
    /* background color */
    --white-bg: #fff;
    --light-grey-bg: #EBEBEB;
    --dark-bg: #1C354C;
    --blue-bg: #005392;
    --blue-bg-active: #0065b3;
    /*fill color*/
    --white-fill: #fff;
    --dark-fill: #1C354C;
    --blue-fill: #005392;
    --selected-fill: gold;
    /* font */
    --title-font: 'Playfair Display', serif;
    --text-font: 'Montserrat', sans-serif;
    /*borders*/
    --notes-border: 1px solid #dadce0;
    --links-border: 2.5px solid #005392;
    --button-border-dark: 1px solid #1C354C;
    --button-border-blue: 1px solid #005392;
    --editor-border: 1px solid #D3D3D3;
    /*shadows*/
    --hover-note-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.30), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
}

/*page layout*/

.main {
    display: flex;
    max-width: 100vw;
    height: 100vh;
    flex-direction: column;
}

.navbar {
    height: 100%;
    min-height: 50px;
    min-width: 50px;
    display: flex;
    flex-basis: 50px;
    justify-content: space-between;
    align-items: center;
    background-color: var(--blue-bg);
}

.nav-list {
    list-style: none;
}

.nav-button {
    background-color: var(--blue-bg);
}

.favorite-toggle {
    padding: 0;
    margin: 0;
    border: 0;
    position: absolute;
    right: 5px;
    bottom: 5px;
    cursor: pointer;
    background-color: transparent;
}

.favorite-toggle svg {
    width: 20px;
    fill: var(--white-fill);
}

.saved-notes-div {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--light-grey-bg);
    height: calc(100% - 50px);
    min-width: 250px;
}

.saved-notes-list {
    list-style: none;
    overflow: auto;
    height: calc(100% - 50px);
    width: 100%;
}

.toolbar-and-editor-container {
    display: flex;
    /* flex-basis: 100vh; */
    flex-direction: column;
    position: absolute;
    top: 50px;
    left: 0;
    background-color: var(--white-bg);
    min-height: 100%;
    width: 100%;
}

.ql-container.ql-snow {
    border: none;
}

.ql-editor {
    flex-basis: 280px;
}

.save-note-btn {
    align-self: center;
}

/* logo and navbar icons*/
.logo {
    font-family: 'Playfair Display', serif;
    font-size: 30px;
    color: var(--white-txt);
    display: inline-flex;
    align-items: center;
    justify-content: center;
    background-color: var(--dark-bg);
    width: 50px;
    height: 50px;
}

.nav-icon {
    display: inline-flex;
    min-width: 50px;
    justify-content: center;
    height: 50px;
}

.nav-icon button {
    border: none;
    width: 100%;
    height: 50px;
}

.nav-icon button:active,
.nav-icon button:hover,
.nav-icon button:focus {
    background-color: var(--blue-bg-active);
}

.nav-icon svg {
    height: 16px;
    fill: var(--white-txt);
    color: var(--white-txt);
}

#starred-button.selected svg,
#search-button.selected svg,
#trash-bin-button.selected svg {
    fill: var(--selected-fill);
    color: var(--selected-fill);
}

/*typography*/
h1,
h2 {
    font-family: var(--title-font);
    font-size: 2rem;
    color: var(--dark-txt);
}

h2 {
    font-variant: small-caps;
}

p,
li {
    font-family: var(--text-font);
    color: var(--dark-txt);
    line-height: 1.8;
}


/* special classes*/
.hidden {
    display: none !important;
}

/*intro section*/
.intro {
    width: 90%;
    margin: 0 auto;
    overflow: auto;
}

.intro p {
    margin-bottom: 50px;
}

.intro p a {
    color: var(--blue-txt);
    font-weight: bold;
    border-bottom: var(--links-border);
}

/* editors bottom toolbar */
.bottom-toolbar {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

/* buttons */
.dark-blue-btn {
    border: var(--button-border-dark);
    background-color: var(--white-bg);
    color: var(--dark-txt);
    font-family: var(--title-font);
    border-radius: 2px;
}

.dark-blue-btn:active,
.dark-blue-btn:hover,
.dark-blue-btn:focus {
    background-color: var(--dark-bg);
    color: var(--white-txt);
}

.new-note-button {
    font-size: 1rem;
    margin: 20px 0;
    padding: 6px;
    border: var(--button-border-blue);
    color: var(--blue-txt);
    font-family: var(--title-font);
    border-radius: 8px;
}

.new-note-button:hover,
.new-note-button:active,
.new-note-button:focus {
    background-color: var(--blue-bg);
    color: var(--white-txt);
}

.save-note-btn {
    font-size: 1rem;
    margin: 20px 0;
    padding: 6px;
}

.printBtn {
    position: absolute;
    right: 20px;
}

#playfair-display-btn {
    position: absolute;
    left: 20px;
}

.playfair-display-text {
    font-family: 'Playfair Display', serif;
}

#roboto-btn {
    position: absolute;
    left: 150px;
}

.roboto-text {
    font-family: 'Roboto', sans-serif;
}

#noto-btn {
    position: absolute;
    left: 220px;
}

.noto-text {
    font-family: 'Noto Serif', serif;
}

.close-btn {
    text-align: right;
    padding-right: 10px;
    font-size: 2rem;
    font-weight: bolder;
}

.close-btn button {
    border: none;
    background-color: var(--white-bg);
}

.delete-note-btn,
.restore-note-btn {
    border: none;
    cursor: pointer;
    width: 30px;
    background-color: transparent;
}

.delete-note-btn svg,
.restore-note-btn svg {
    height: 10px;
    color: var(--dark-fill);
}


/* notes */
.note {
    border: var(--notes-border);
    border-radius: 3px;
    font-size: .8rem;
    padding: 5px;
    position: relative;
    width: 85%;
    margin: 0 auto 20px auto;
    transition: width .2s;
    background-color: #fff;
}

.note.favorite .favorite-toggle svg {
    fill: var(--selected-fill);
}

.note h1,
.note h2,
.note h3,
.note h4,
.note h5,
.note h6 {
    font-size: 1.1rem;
    font-weight: 600;
}

.active-note {
    background-color: var(--white-bg);
    border-right: none;
    border-left: none;
    width: 100%;
    border-radius: 0;
}

.note-text {
    max-height: 250px;
    overflow: hidden;
}

.note-text ul,
.note-text ol {
    padding-left: 20px;
}

.note:hover,
.note:active,
.note:focus {
    box-shadow: var(--hover-note-shadow);
}

#searchInput {
    margin: 10px;
    padding: 5px;
    height: 30px;
    width: 205px;
    font-size: 17px;
    background-color: white;
    border-radius: 5px;
    letter-spacing: 1px;
}

/*note toolbar*/
.note-toolbar {
    display: flex;
    align-items: center;
}

/*date*/
.date {
    font-family: 'Inconsolata';
    font-size: .7rem;
    font-weight: 400;
}

/*large screen version*/
@media screen and (min-width: 800px) {
    .main {
        flex-direction: row;
    }

    .saved-notes-div {
        flex-basis: 250px;
        height: 100%;
        width: 250px;
    }

    .toolbar-and-editor-container {
        position: static;
        max-width: 800px;
    }

    #editor {
        margin: 0 auto;
        width: 100%;
        max-width: 550px;
    }

    .navbar {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
    }

    .logo {
        width: 100%;
        height: 50px;
        margin-bottom: 40px;
    }

    .nav-icon {
        flex-direction: column;
        align-items: center;
        min-height: 50px;
    }
}

